system/gatekeeper/tests/fixtures/ingress-annotations/networking-disabled-snippet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/configuration-snippet: ""
  labels:
    support-group: foo-group
    service: dummy
