system/gatekeeper/tests/fixtures/ingress-annotations/networking-pass.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-request-buffering: "off"
  labels:
    support-group: foo-group
    service: dummy
