system/gatekeeper/tests/fixtures/ingress-annotations/networking-wrong-prefix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  labels:
    ccloud/support-group: foo-group
    ccloud/service: dummy
